Add product component and show with dynamic components

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -14,6 +14,12 @@
             window.currentCategoryId = null;
         {% endif %}
 
+        {% if  currentProductId is defined %}
+            window. currentProductId = '{{  currentProductId|e('js') }}';
+        {% else %}
+            window. currentProductId = null;
+        {% endif %}
+
         window.categories = {{ categories|jsonld }};
     </script>
 
