--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import './components/light-component';
 @import './variables/colors';
 @import '~bootstrap';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 body {
