--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            Shopping Cart (<span>0</span>)
+                            Shopping Cart (<span>{{ count_cart_items() }}</span>)
                         </a>
                     </li>
                 </ul>
@@ -58,6 +58,13 @@
         </p>
 
         {% block javascripts %}
+            <script>
+                {% if app.session.has('_cart_id') %}
+                    window.cartIri = '{{ app.session.get('_cart_'~app.session.get('_cart_id'))|iri }}';
+                {% else %}
+                    window.cartIri = null;
+                {% endif %}
+            </script>
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
